# Synthra

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  sample.env  sample.review_agent.py
configs/: base-config.yml  linux-config.yml  linux.config.yml  mac-config.yml  mac.config.yml  windows-config.yml
local-llm/: llm.py
local_llm/: llm.py
speech/: speech.py
src/: ascii_art.txt  cli.py  config.py  main.py
src/agents/: requirements.txt
src/agents/coding_agent/: agent.py  memory.py  tool.py
src/agents/research_agent/: README.md  research_agent.py
src/agents/research_agent/core/: graph.py
src/agents/research_agent/nodes/: curate.py  report.py  research.py
src/agents/review_agent/: agent.py  memory.py  review_agent_state.db  tool.py
src/agents/supervisor_agent/: supervisor.py  tool.py
src/agents_config/: supervisor_config.py
src/configs/: base.config.yml  mac.config.yml
src/model/: model.py
src/prompts/: supervisor_prompt.py
src/speech/: speech.py
src/tools/: scaffold_tools.py  shell_tools.py
