[project]
name = "synthra"
version = "0.1.0"
description = "A Agentic AI based coding and research assistant"
authors = [
    {name = "vanshdubey",email = "vanshdubey101963@gmail.com"},
    {name = "yugshrivastava", email = "shrivastavayug04@gmail.com"},
    {name = "viraljain", email = "viraljain4477@gmail.com"},
    {name = "sanyambhandari", email = "sanyam280@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4"
dependencies = [
    "langchain-core (>=0.3.76,<0.4.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "langgraph-checkpoint-sqlite (>=2.0.11,<3.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "langchain-google-genai (>=2.1.12,<3.0.0)",
    "speechrecognition (>=3.14.3,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "readability-lxml (>=0.8.4.1,<0.9.0.0)",
    "reportlab (>=4.4.4,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
