[project]
name = "synthra"
version = "0.1.0"
description = "A Agentic AI based coding and research assistant"
authors = [
    {name = "vanshdubey",email = "vanshdubey101963@gmail.com"},
    {name = "yugshrivastava", email = "shrivastavayug04@gmail.com"},
    {name = "viraljain", email = "viraljain4477@gmail.com"},
    {name = "sanyambhandari", email = "sanyam.code280@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4"
dependencies = [
    "langchain-core (>=0.3.76,<0.4.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "langgraph-checkpoint-sqlite (>=2.0.11,<3.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "langchain-google-genai (>=2.1.12,<3.0.0)",
    "speechrecognition (>=3.14.3,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "readability-lxml (>=0.8.4.1,<0.9.0.0)",
    "reportlab (>=4.4.4,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "langgraph-supervisor (>=0.0.29,<0.0.30)",
    "google-search-results (>=2.4.2,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "google-genai (>=1.62.0,<2.0.0)",
    "tavily-python (>=0.7.21,<0.8.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "orjson (>=3.11.7,<4.0.0)",
    "zstandard (>=0.25.0,<0.26.0)",
    "xxhash (>=3.6.0,<4.0.0)",
    "filetype (>=1.2.0,<2.0.0)",
    "fpdf (>=1.7.2,<2.0.0)",
    "uuid-utils (>=0.14.0,<0.15.0)",
    "jsonpatch (>=1.33,<2.0)",
    "jsonpointer (>=3.0.0,<4.0.0)",
    "langsmith (>=0.7.1,<0.8.0)",
    "rich (>=14.3.2,<15.0.0)",
    "langchain-tavily (>=0.2.17,<0.3.0)"
]

[tool.poetry]
package-mode = false
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
